<resources>
    <string name="app_name">PromoFinder</string>

    <!--  Navigation + Drawer  -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--  Sections  -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_sign_out">Выйти из аккаунта</string>
    <string name="menu_sign_up">Авторизоваться</string>

    <!--  Welcome Fragment  -->
    <string name="welcome_label">Добро пожаловать!</string>
    <string name="next_with_account_button">Войти / Зарегистрироваться</string>
    <string name="next_without_account_button">Продолжить без регистрации</string>

    <!--  Auth Fragment  -->
    <string name="tab_signin_label">Войти</string>
    <string name="tab_signup_label">Зарегистрироваться</string>
    <string name="back_to_welcome_screen">Вернуться на экран приветствия</string>
    <string name="signin_button">Войти в аккаунт</string>
    <string name="signup_button">Зарегистрироваться</string>
    <!--  Login Fragment  -->
    <string name="email_label">Почта</string>
    <string name="password_label">Пароль</string>
    <string name="login_error_message">Некорректное имя пользователя или пароль!</string>
    <!--  Signup Fragment  -->
    <string name="username_label">Имя пользователя</string>
    <string name="repeat_password_label">Повторите пароль</string>
    <string name="signup_error_message">Данные не корректны, или почта уже занята!</string>

    <!--  Home Fragment  -->
    <string name="search_label">Введите название</string>
    <string name="welcome_home_label">Здравствуйте!Чтобы найти нужный вам промокод, воспользуйтесь поиском!</string>
    <!--  PromoCard  -->
    <string name="expiration_date">Действует до: %s</string>
    <string name="button_get_promocode">Получить</string>
    <string name="loading_text">Загружается…</string>
    <string name="no_results_label">Нет результатов</string>
    <string name="promocode_clipboard_description">Промокод (%s)</string>
    <string name="copied_to_clipboard">Промокод скопирован!</string>
</resources>